--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -4,6 +4,8 @@
   <%= f.label :artist_name %>
   <%= f.text_field :artist_name %>
   <br />
+  <%= f.label :artist_id%>
+  <%= artist_select(@song, @song.artist)%>
 
   <%= f.submit %>
 <% end %>
